# Todolist

./: README.md  pyproject.toml
common/: models.py
config/: settings.py  urls.py
exs/: admin.py  apps.py  models.py
exs/migrations/: 0001_initial.py
imgs/: admin.py  models.py
imgs/migrations/: 0001_initial.py
todos/: admin.py  models.py  serializer.py  urls.py  views.py
todos/migrations/: 0001_initial.py  0002_todo_created_at_todo_updated_at.py  0003_alter_todo_options.py
users/: admin.py  models.py  serializer.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_avatar_user_name.py
